[[bin]]
name = "server"
required-features = ["tokio/macros", "tokio/rt-multi-thread"]

[dependencies]
home = { default-features = false, version = "0.5" }
tokio = { default-features = false, features = ["fs", "net", "time", "macros", "rt-multi-thread"], version = "1.36" }
tokio-rustls = { default-features = false, features = ["tls12"], version = "0.25" }
wtx = { default-features = false, features = ["rustls-pemfile", "tokio-rustls", "web-socket-handshake", "webpki-roots"], version = "0.14" }

[package]
edition = "2021"
license = "Apache-2.0"
name = "irec"
publish = false
version = "0.1.0"